--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier:fix": "prettier --ignore-unknown --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@mantine/core": "^6.0.11",
     "@mantine/dropzone": "^6.0.11",
+    "@mantine/form": "^6.0.14",
     "@mantine/hooks": "^6.0.11",
     "@mantine/next": "^6.0.11",
     "@mantine/ssr": "^6.0.11",
@@ -22,6 +24,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "jotai": "^2.2.1",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
